# coco

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: ci.yml
coco/: cli.py
coco/analysis/: app.py
coco/core/: agent.py  database.py  environment.py
coco/evolution/: engine.py
coco/tasks/: code_fix.py  number_guesser.py  token_heist.py
docs/: ARCHITECTURE.md  COMPREHENSIVE_DOCS.md  ROADMAP.md
docs/benchmarks/: README.md
examples/: run_code_fix.py  run_evolution_token_heist.py  run_number_guesser.py  run_token_heist.py
src/coco/: cli.py
src/coco/analysis/: app.py
src/coco/core/: agent.py  database.py  environment.py
src/coco/evolution/: engine.py
src/coco/tasks/: __init__.py  code_fix.py  number_guesser.py  runners.py  token_heist.py
tests/: test_agent.py  test_cli.py  test_code_fix.py  test_database.py  test_environment.py  test_environment_step.py  test_evolution.py  test_number_guesser.py  test_runners.py  test_token_heist.py  test_vector_memory.py
