[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "coco"
version = "0.1.0"
description = "Collaborate || Compete: An evolutionary agentic LLM framework"
readme = "README.md"
authors = [
    { name = "Sebastian Pagel", email = "pagel.sebastian.1@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "litellm>=1.0.0",
    "pydantic>=2.0.0",
    "asyncio",
    "streamlit>=1.30.0",
    "pandas>=2.0.0",
    "plotly>=5.18.0",
    "networkx>=3.0",
    "chromadb>=0.4.0",
    "typer>=0.9.0"
]

[project.scripts]
coco = "coco.cli:app"
coco-sim = "coco.cli:sim"
coco-dash = "coco.cli:dashboard"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
    "mypy>=1.0",
    "black>=23.0"
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --cov=coco --cov-report=term-missing --cov-fail-under=80"
testpaths = [
    "tests",
]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["coco"]
omit = [
    "src/coco/analysis/*"
]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
# Enable Pyflakes (F) and a subset of the pycodestyle (E)  codes by default.
# Also enable isort (I) for import sorting.
select = ["E4", "E7", "E9", "F", "I"]
fixable = ["ALL"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
mypy_path = "src"
